--- a/styles.css
+++ b/styles.css
@@ -332,41 +332,70 @@ div {
 }
 
 /*-------------------------------- Projects ----------------------------------*/
-.carousel {
+#projects {
     position: relative;
-    overflow: hidden;
+    max-width: 48rem;
+    margin: 0 auto;
 }
 
-#carousel-inner {
+.slider {
     display: flex;
-    transition: tranform 0.5s ease-in-out;
-    height: 500px;
-    background-color: purple;
+    aspect-ratio: 16 / 9;
+    overflow-x: auto;
+    scroll-snap-type: x mandatory;
+    scroll-behavior: smooth;
+    border-radius: 0.5rem;
+    /* padding: 20px auto; */
+    margin: 3rem 1rem;
 }
 
-.carousel-item {
-    flex: 0 0 100%;
+ /* Hide scrollbar for Chrome, Safari and Opera */
+ .slider::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .slider {
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+  } 
+
+.slider img {
+    flex: 1 0 100%;
+    scroll-snap-align: start;
+    object-fit: cover;
 }
 
-#carousel-control-prev,
-#carousel-control-next {
+.slider-nav {
+    /* background-color: red; */
+    padding: 0.75rem;
+    display: flex;
+    column-gap: 1rem;
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 50px;
-    height: 50px;
-    background-color: green;
-    color: white;
-    border: none;
-    cursor: pointer;
+    bottom: 3rem;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    z-index: 100;
+    align-items: center;
 }
 
-#carousel-control-prev {
-    left: 0;
+.slider-nav a {
+    width: .75rem;
+    height: .75rem;
+    border-radius: 50%;
+    background-color: #fff;
+    opacity: 0.70;
+    transition: opacity ease 250ms;
 }
-#carousel-control-next {
-    right: 0;
+
+.slider-nav a:hover {
+    opacity: 100%;
 }
+
+.slider-nav-hover {
+    opacity: 100% !important;
+}
+
 /*------------------------------- CONTACT SECTION ----------------------------*/
 .contact-form {
     padding: 10px;
@@ -493,10 +522,6 @@ textarea {
         flex-direction: column;
     }
 
-    /* #final-section {
-        height: 100vh;
-    } */
-
     .section div:not(.exclude-full-width-on-mobile) {
         width: 100%;
     }
@@ -541,6 +566,12 @@ textarea {
 
     #about img {
         width: 100%;
+    }
+
+    #project-slider {
+        width: 100%;
+        padding: 0;
+        margin: 3rem 0;
     }
 }
 
