Modifying css to be interchangable. Making auto scrolling a thing changed the assets

--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,16 @@
-
+:root {
+    /* 497AA6 */
+    --accent-color: #497AA6;
+    --background-dark: #252526;
+    --heading-color: #36546e;
+}
 
 body {
     margin: 0;
     padding: 0;
     font-family: 'Ubuntu', Arial, Helvetica, sans-serif;
     height: 100vh;
-    background-color: #252526;
+    background-color: var(--background-dark);
 }
 
 div {
@@ -37,12 +42,18 @@ h1, h2, h3 {
 .image-container {
     z-index: 8;
     position: relative;
-    background-image: url("/assets/banner.jpg");
+    background-image: url("/assets/banner_vert.jpg");
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
 }
 
+@media screen and (min-width: 825px) {
+    .image-container {
+        background-image: url("/assets/banner_horz.JPG");
+        background-position: 50% 10%;
+    }
+}
 /*--------------------------IMAGE OVERLAYS------------------------------------*/
 .overlay {
     /* div on top of the image */
@@ -85,7 +96,7 @@ h1, h2, h3 {
 
 /*------------------------------- NAV BAR ------------------------------------*/
 
-.navbar {
+#navbar {
     display: flex;
     background-color: #000;
     position: relative;
@@ -107,7 +118,7 @@ h1, h2, h3 {
     background-color: #222;
 }
 
-.navbar a {
+#navbar a {
     font-weight: bold;
     font-size: 20px;
 }
@@ -115,7 +126,6 @@ h1, h2, h3 {
 
 /*--------------------------------------SECTIONS ----------------------------*/
 .section {
-    background-color: #252526;
     height: auto;
     display: flex;
     flex-direction: row;
@@ -162,7 +172,7 @@ h1, h2, h3 {
 }
 
 #resume-download {
-    background-color: #252526;
+    background-color: #00000000;
     width: 100%;
     padding: 20px;
 }
@@ -181,7 +191,7 @@ h1, h2, h3 {
 }
 
 .section-break h2 {
-    background-color: #36546e;
+    background-color: var(--heading-color);
     padding: 5px 15px 5px 15px;
     margin-left: 20px;
     display: inline;
@@ -218,7 +228,7 @@ h1, h2, h3 {
     padding: 0;
 }
 .certification:hover {
-    color: #497AA6;
+    color: var(--accent-color);
 }
 
 
@@ -274,7 +284,7 @@ h1, h2, h3 {
     width:  15px;
     height: 15px;
     border-radius: 50%;
-    background-color: #252526;
+    background-color: var(--background-dark);
     border: white;
     border-style: solid;
     border-width: 3px;
@@ -288,10 +298,6 @@ h1, h2, h3 {
 
 .timeline-grid {
     grid-template-columns: 30% 70%;
-}
-
-#education {
-    background-color: #252526;
 }
 
 @media screen and (max-width: 825px) {
@@ -465,7 +471,7 @@ h1, h2, h3 {
 
 .subheading a {
     text-decoration: None;
-    color: #497AA6;
+    color: var(--accent-color);
     padding-left: 10px;
 }
 
@@ -552,7 +558,7 @@ h1, h2, h3 {
 .links {
     width: 100%;
     padding: 10px;
-    background-color: #497AA6;
+    background-color: var(--accent-color);
 }
 
 .links * {
@@ -745,7 +751,7 @@ h1, h2, h3 {
     box-shadow: none;
 
     /* Add any other custom styling you desire */
-    background-color: #252526;
+    background-color: var(--background-dark);
     color: #fff;
     padding: 10px 25px;
     border: 2px solid white;
